// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link Default 1`] = `
<div
  className="sc-bdvvtL sc-dkYRCH braPyZ gHYXiB"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi LPbfW dcvcKR u-text--large"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Blockchain
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi LPbfW dcvcKR u-text--large"
        disabled={true}
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Blockchain
      </a>
    </span>
  </div>
</div>
`;

exports[`Storyshots Link Sizing 1`] = `
<div
  className="sc-bdvvtL sc-dkYRCH braPyZ gHYXiB"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi LPbfW dcvcKR u-text--large"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Large
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi fukpXs dcvcKR"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Regular
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi haBRUx dcvcKR u-text--small"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Small
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="sc-jObWnj sc-bBHHxi ljwEGk dcvcKR u-text--xsmall"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        XS Small
      </a>
    </span>
  </div>
</div>
`;

exports[`Storyshots Link System 1`] = `
<div
  className="sc-bdvvtL sc-dkYRCH braPyZ gHYXiB"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        appearance="system"
        className="sc-jObWnj sc-dPiLbb fukpXs bsfcXq u-text--medium"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        Blockchain
      </a>
    </span>
    <span>
      <a
        appearance="system"
        className="sc-jObWnj sc-dPiLbb ljwEGk bsfcXq u-text--xsmall"
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        <svg
          id="/assets/icons/link.svg"
        />
        /lotus/miner
      </a>
    </span>
    <span>
      <a
        appearance="system"
        className="sc-jObWnj sc-dPiLbb ljwEGk bsfcXq u-text--xsmall"
        disabled={true}
        href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
        onClick={[Function]}
        target="blank"
      >
        <svg
          id="/assets/icons/link.svg"
        />
        /lotus/miner
      </a>
    </span>
  </div>
</div>
`;
